--- a/templates/login.html
+++ b/templates/login.html
@@ -28,6 +28,15 @@
         <input type="submit" value="Login">
     </form>
 
+    <style>
+        body {
+            background-image: url("https://cdn.pixabay.com/photo/2012/11/08/15/44/umbrella-65380_1280.jpg");
+            background-size: cover;
+            background-repeat: no-repeat;
+        }
+    </style>
+
+
 </body>
 
 </html>
