--- a/templates/register.html
+++ b/templates/register.html
@@ -28,6 +28,15 @@
         <input type="submit" value="Register">
     </form>
 
+    <style>
+        body {
+            background-image: url("https://cdn.pixabay.com/photo/2016/11/14/03/43/kimono-1822520_1280.jpg");
+            background-size: cover;
+            background-repeat: no-repeat;
+        }
+    </style>
+
+
 </body>
 
 </html>
