--- a/templates/index.html
+++ b/templates/index.html
@@ -5,16 +5,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>レンターンブレラ</title>
+    <title>Rentumbrella</title>
+
+    <p style="color: silver;">〜Rentumbrella〜</p>
+
+    <!-- Bootstrap JavaScript (jQueryとPopper.jsも必要) -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@2.10.2/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <!-- ナビゲーションバーのコンテンツ -->
+    </nav>
+
 </head>
 
 <body>
-    <h1>利用可能な傘のリスト</h1>
-    <ul>
-        {% for umbrella in umbrellas %}
-        <li>{{ umbrella.design }} (在庫: {{ umbrella.stock }})</li>
-        {% endfor %}
-    </ul>
+    <h1><p style="color: silver;">WaGaSa -japanese style umbrellas-</p></h1>
+    <section>
+        <h2><p style="color: silver;">〜和傘〜</p></h2>
+        <p><p style="color: silver;">日本の"伝統的な傘"と"個性的な傘"をあなたへ</p></p>
+
+        <a href="{{ url_for('catalog') }}">カタログを見る</a>
+    </section>
+
+    <style>
+        body {
+            background-image: url("https://images.pexels.com/photos/39079/japanese-umbrellas-umbrella-japanese-style-k-39079.jpeg");
+            background-size: cover;
+            background-repeat: no-repeat;
+        }
+    </style>
+
+
 </body>
 
 </html>
